# monster_mesh

./: .gitignore  HANDOFF.md  HANDOFF_LORD_v1.md  HANDOFF_LORD_v1_TAKEOVER.md  PLAN_PVP_ELO_TOURNAMENTS_GYMS.md  README.md  audit_log_02.md  audit_log_04.md  browser_mockup.html  future_updates.md  platformio.ini  userPrefs.jsonc
data/: gauntlet.example.json
docs/: 2026-04-21-emulator-freeze-handoff.md  ARCHITECTURE.md  BATTLE_ENGINE.md  BUILD.md  CREDITS.md  DAYCARE.md  GAMEPLAY.md  MULTIPLAYER.md  POKEMESH.md  THEMES.md  _config.yml  index.md
firmware-builds/: .build_counter  Heltec-t114-pet-b394-phase2.uf2  Heltec-t114-pet-b395-bigger-fonts-paced-log.uf2
firmware/src/: FileBrowser.h  main_diag.cpp
firmware_archive/: t114-20260526-1623-9514acc63-ai_revert.uf2  t114-20260526-1629-9514acc63-kofreeze.uf2  t114-20260526-1630-9514acc63-xp10pct.uf2  t114-20260526-1639-9514acc63-resultwipe.uf2  t114-20260526-1704-9514acc63-fightlabel.uf2  t114-20260526-1709-9514acc63-logdrain.uf2  t114-20260526-1717-9514acc63-longerfreeze.uf2  t114-20260526-1726-9514acc63-wipefix.uf2  t114-20260526-1735-9514acc63-wipefix2.uf2  t114-20260526-2002-9514acc63-stalkerbw.uf2  t114-20260526-2005-9514acc63-themehammer.uf2  t114-20260526-2238-2d7949728-idlebattle.uf2  t114-20260527-1219-cfc00da76-daycarelite.uf2  t114-20260527-1226-cfc00da76-daycarefight.uf2  t114-20260527-1251-78efd4e44-gauntletpvp.uf2  t114-20260527-1306-78efd4e44-hb.uf2  t114-20260527-1312-78efd4e44-petsubmenu.uf2  t114-20260527-1315-63d95a77c-statusvariance.uf2  t114-20260527-1355-63d95a77c-submenusdeferred.uf2  t114-20260527-1530-63d95a77c-fightonly.uf2  t114-20260527-1550-63d95a77c-foedex.uf2  t114-20260528-1039-da3e3e5c3-gauntletfix.uf2  t114-20260528-1048-da3e3e5c3-pvpprotect.uf2  t114-20260528-1056-da3e3e5c3-pvppreempt.uf2  t114-20260528-1106-da3e3e5c3-gauntletdrain.uf2
meshtastic-module/: BattlePacket.h  MonsterMeshBattleShim.cpp  MonsterMeshEmulator.cpp  MonsterMeshEmulator.h  MonsterMeshLobby.cpp  MonsterMeshModule.cpp  MonsterMeshModule.h
monster_mesh_pi/: .gitignore  CMakeLists.txt  README.md
monster_mesh_pi/.github/workflows/: build-image.yml
monster_mesh_pi/docs/: UPDATE-GPI-WITH-CLAUDE.md  breeding-import-format.md  breeding-roster.example.json  color-variants-discord.txt  color-variants.md
monster_mesh_pi/image-build/: .gitignore  Dockerfile  README.md  build.sh  customize.sh  host-build.sh
monster_mesh_pi/image-build/config-patches/: config.txt.append
monster_mesh_pi/retropie/: es_systems_entry.xml  install.sh  launch.sh  mm-reset-gyms  monstermesh.service  toolchain-arm.cmake
monster_mesh_pi/retropie/themes/monstermesh/: theme.xml
monster_mesh_pi/scripts/: gen_daycare_data.py  gen_daycare_events.py  gen_daycare_lore.py  gen_daycare_social.py  gen_gen3_data.py  gen_learnsets.py
monster_mesh_pi/src/battle/: Gen1BattleEngine.cpp  Gen1BattleEngine.h  Gen3SavReader.h  LordE4.cpp  LordGyms.cpp  LordLogic.cpp  LordSave.cpp  WirePartyCodec.h  showdown_gen1_basestats.h  showdown_gen1_moves.h  showdown_gen3_basestats.h  showdown_gen3_moves.h
monster_mesh_pi/src/daemon/: DaycareEventGen.cpp  IpcServer.cpp  IpcServer.h  MeshSerial.cpp  MeshSerial.h  MonsterMeshDaemon.cpp  MonsterMeshDaemon.h  PokemonDaycare.cpp  PokemonDaycare.h  SaveWatcher.cpp  SaveWatcher.h  main.cpp
monster_mesh_pi/src/shared/: BattlePacket.h  BreederRoom.h  BreedingApp.cpp  BreedingApp.h  BreedingGenetics.h  DaycareData.h  DaycareEventGen.h  DaycareSavPatcher.h  DaycareTypes.h  Gen1BaseExp.h  Gen1Evolution.h  Gen1Learnsets.h  Gen1Species.h  IpcProtocol.h  KantoZones.h  LordE4.h  LordGyms.h  LordLogic.h  LordSave.h  PentestCatch.h  PokemonData.h  platform.h
monster_mesh_pi/src/terminal/: BattleWindow.cpp  BattleWindow.h  BitmapFont.cpp  BitmapFont.h  Gen2BackIcons.h  Gen2ColorIcons.h  Gen2SpriteCache.cpp  Gen2SpriteCache.h  Gen3Back4bpp.h  Gen3BackIcons.h  Gen3ColorIcons.h  Gen3Front4bpp.h  InputHandler.cpp  InputHandler.h  IpcClient.cpp  IpcClient.h  SpriteRender.cpp  SpriteRender.h  TerminalUI.cpp  TerminalUI.h  main.cpp
monster_mesh_pi/tests/: pentest_catch.cpp  test_battle.cpp  test_breeding.cpp
monster_mesh_pi/tools/: accent_preview.py  all_12_anim.py  barbie_demo.py  barbie_refine_demo.py  blackout_demo.py  blackout_pink_demo.py  blackout_rainbow_demo.py  blackout_shiny_demo.py  blackout_stack_demo.py  dark_rainbow_anim.py  darkpink_demo.py  enable_serial_proto  enable_serial_proto.cpp  final_sheet_wide.py  final_skins_demo.py  gen2_sprite_bake.py  gen3_sprite_bake.py  gen3_sprite_bake_4bpp.py  gen3_sprite_bake_tdeck.py  goth_compare_demo.py  goth_curve_demo.py  goth_methods_demo.py  goth_redrange_demo.py  goth_regshiny_demo.py  grids_12.py  gritty_sprite_bake.py  lighteyes_demo.py  mesh_relay.py  mqtt_relay.py  nine_types_sheet.py  pink_shiny_demo.py  rainbow_anim_demo.py  rainbow_lite_anim.py  rainbow_methods_demo.py  rainbow_variants_anim.py  red_gate_dialed.py  red_gate_final.py  red_gate_tune.py  red_gate_tune2.py  red_gate_wider.py  (+5 more)
patches/: Modules.patch  TFTDisplay.patch  kbI2cBase.patch
patches/device-ui/: LGFXDriver.h  LogRotate.cpp  TFTView_320x240.cpp  TFTView_320x240.h  Themes.cpp  Themes.h  lv_font_cozette_13.c  lv_font_cozette_26.c  screens.c  screens.h  styles.c
scripts/: apply_device_ui_patches.py  gen_gauntlet.py  gen_gen1_color_icons.py  gen_gen1_icons.py  monstermesh_version.py
src/: BluetoothStatus.h  PowerFSM.cpp  main.cpp
src/concurrency/: Lock.cpp  Lock.h
src/graphics/: Screen.cpp  Screen.h  TFTDisplay.cpp  images.h
src/mesh/: CryptoEngine.cpp  Default.h  MeshModule.h  MeshService.cpp  NodeDB.cpp  PhoneAPI.cpp  (+1 more)
standalone-firmware/: AlertDriver.h  BattlePacket.h  BattleShim.cpp  BattleShim.h  DebugOverlay.h  EmulatorApp.cpp  EmulatorApp.h  Gen1Species.h  ISerialLink.h  InputMap.cpp  InputMap.h  Lobby.cpp  Lobby.h  LobbyOverlay.h  PokemonData.h  RadioTransport.h  SX1262Transport.cpp  SX1262Transport.h  StatusOverlay.cpp  StatusOverlay.h  TournamentClient.h  TournamentCoordinator.h  TournamentOverlay.h  boot_test.cpp  main.cpp  main_gym.cpp  peanut_gb_impl.cpp  pins.h  platformio.ini
(+191 files in other folders)
